// Copyright 2021 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message MonitoringService {
  string name = 1;
  string display_name = 2;
  MonitoringServiceCustom custom = 3;
  MonitoringServiceAppEngine app_engine = 4;
  MonitoringServiceCloudEndpoints cloud_endpoints = 5;
  MonitoringServiceClusterIstio cluster_istio = 6;
  MonitoringServiceMeshIstio mesh_istio = 7;
  MonitoringServiceIstioCanonicalService istio_canonical_service = 8;
  MonitoringServiceCloudRun cloud_run = 9;
  MonitoringServiceGkeNamespace gke_namespace = 10;
  MonitoringServiceGkeWorkload gke_workload = 11;
  MonitoringServiceGkeService gke_service = 12;
  MonitoringServiceTelemetry telemetry = 13;
  map<string, string> user_labels = 14;
  bool deleted = 15;
  string project = 16;
}

message MonitoringServiceCustom {
}

message MonitoringServiceAppEngine {
  string module_id = 1;
}

message MonitoringServiceCloudEndpoints {
  string service = 1;
}

message MonitoringServiceClusterIstio {
  string location = 1;
  string cluster_name = 2;
  string service_namespace = 3;
  string service_name = 4;
}

message MonitoringServiceMeshIstio {
  string mesh_uid = 1;
  string service_namespace = 2;
  string service_name = 3;
}

message MonitoringServiceIstioCanonicalService {
  string mesh_uid = 1;
  string canonical_service_namespace = 2;
  string canonical_service = 3;
}

message MonitoringServiceCloudRun {
  string service_name = 1;
  string location = 2;
}

message MonitoringServiceGkeNamespace {
  string project_id = 1;
  string location = 2;
  string cluster_name = 3;
  string namespace_name = 4;
}

message MonitoringServiceGkeWorkload {
  string project_id = 1;
  string location = 2;
  string cluster_name = 3;
  string namespace_name = 4;
  string top_level_controller_type = 5;
  string top_level_controller_name = 6;
}

message MonitoringServiceGkeService {
  string project_id = 1;
  string location = 2;
  string cluster_name = 3;
  string namespace_name = 4;
  string service_name = 5;
}

message MonitoringServiceTelemetry {
  string resource_name = 1;
}

message ApplyMonitoringServiceRequest {
  MonitoringService resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteMonitoringServiceRequest {
  string service_account_file = 1;
  MonitoringService resource = 2;
}

message ListMonitoringServiceRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListMonitoringServiceResponse {
  repeated MonitoringService items = 1;
}

service MonitoringServiceService {
  rpc ApplyMonitoringService(ApplyMonitoringServiceRequest) returns (MonitoringService);
  rpc DeleteMonitoringService(DeleteMonitoringServiceRequest) returns (google.protobuf.Empty);
  rpc ListMonitoringService(ListMonitoringServiceRequest) returns (ListMonitoringServiceResponse);
}
